{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 954,
  "lineage": "c320acac-e897-5efa-a7c4-9eda837717ac",
  "resources": [
    {
      "module": "module.common_extlb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/hub-ncus-palofw-plb-pip-01"
              }
            ],
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-plb-01",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.common_extlb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "name": "LoadBalancerBackendPool",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.common_extlb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/probes/HealthProbe-22",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "name": "HealthProbe-22",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.common_extlb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/loadBalancingRules/rule-0",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "name": "rule-0",
            "probe_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_lb_backend_address_pool.main",
            "module.common_extlb.azurerm_lb_probe.main",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 22,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/loadBalancingRules/rule-1",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "name": "rule-1",
            "probe_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_lb_backend_address_pool.main",
            "module.common_extlb.azurerm_lb_probe.main",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 443,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/loadBalancingRules/rule-2",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01",
            "name": "rule-2",
            "probe_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/probes/HealthProbe-22",
            "protocol": "Tcp",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_lb_backend_address_pool.main",
            "module.common_extlb.azurerm_lb_probe.main",
            "module.common_extlb.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.common_extlb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/hub-ncus-palofw-plb-pip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.207.217",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-plb-pip-01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-01-nic0",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-01-nic0-pip-01",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-mgmt-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-01-nic0",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-mgmt-nsg",
            "private_ip_address": "172.31.1.4",
            "private_ip_addresses": [
              "172.31.1.4"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_fw.azurerm_network_security_group.mgmt",
            "module.common_fw.azurerm_public_ip.nic0",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-02-nic0",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.5",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-02-nic0-pip-01",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-mgmt-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-02-nic0",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-mgmt-nsg",
            "private_ip_address": "172.31.1.5",
            "private_ip_addresses": [
              "172.31.1.5"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_fw.azurerm_network_security_group.mgmt",
            "module.common_fw.azurerm_public_ip.nic0",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-01-nic1",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool"
                ],
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.68",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-01-nic1-pip-01",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-untrusted-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-01-nic1",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-data-nsg",
            "private_ip_address": "172.31.1.68",
            "private_ip_addresses": [
              "172.31.1.68"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_lb_backend_address_pool.main",
            "module.common_extlb.azurerm_public_ip.main",
            "module.common_fw.azurerm_network_security_group.data",
            "module.common_fw.azurerm_public_ip.nic1",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-02-nic1",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-plb-01/backendAddressPools/LoadBalancerBackendPool"
                ],
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.69",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-02-nic1-pip-01",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-untrusted-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-02-nic1",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-data-nsg",
            "private_ip_address": "172.31.1.69",
            "private_ip_addresses": [
              "172.31.1.69"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_extlb.azurerm_lb.main",
            "module.common_extlb.azurerm_lb_backend_address_pool.main",
            "module.common_extlb.azurerm_public_ip.main",
            "module.common_fw.azurerm_network_security_group.data",
            "module.common_fw.azurerm_public_ip.nic1",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-01-nic2",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/backendAddressPools/LoadBalancerBackendPool"
                ],
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.132",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-trusted-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-01-nic2",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-data-nsg",
            "private_ip_address": "172.31.1.132",
            "private_ip_addresses": [
              "172.31.1.132"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_fw.azurerm_network_security_group.data",
            "module.common_fw.azurerm_public_ip.nic2",
            "module.common_intlb.azurerm_lb.main",
            "module.common_intlb.azurerm_lb_backend_address_pool.main",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkInterfaces/pan-fw-aznc-02-nic2",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/backendAddressPools/LoadBalancerBackendPool"
                ],
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.134",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-trusted-sn-01"
              }
            ],
            "location": "northcentralus",
            "name": "pan-fw-aznc-02-nic2",
            "network_security_group_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-data-nsg",
            "private_ip_address": "172.31.1.134",
            "private_ip_addresses": [
              "172.31.1.134"
            ],
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_fw.azurerm_network_security_group.data",
            "module.common_fw.azurerm_public_ip.nic2",
            "module.common_intlb.azurerm_lb.main",
            "module.common_intlb.azurerm_lb_backend_address_pool.main",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-data-nsg",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-data-nsg",
            "resource_group_name": "hub-ncus-palofw-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/networkSecurityGroups/hub-ncus-palofw-mgmt-nsg",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-mgmt-nsg",
            "resource_group_name": "hub-ncus-palofw-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "mgmt-inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-01-nic0-pip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.200.141",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "pan-fw-aznc-01-nic0-pip-01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-02-nic0-pip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.200.136",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "pan-fw-aznc-02-nic0-pip-01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        }
      ]
    },
    {
      "module": "module.common_fw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-01-nic1-pip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.207.220",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "pan-fw-aznc-01-nic1-pip-01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/publicIPAddresses/pan-fw-aznc-02-nic1-pip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.201.251",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "pan-fw-aznc-02-nic1-pip-01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw"
          ]
        }
      ]
    },
    {
      "module": "module.common_intlb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address": "172.31.1.133",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-trusted-sn-01"
              }
            ],
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-ilb-01",
            "private_ip_address": "172.31.1.133",
            "private_ip_addresses": [
              "172.31.1.133"
            ],
            "resource_group_name": "hub-ncus-palofw-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_intlb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/backendAddressPools/LoadBalancerBackendPool",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01",
            "name": "LoadBalancerBackendPool",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_intlb.azurerm_lb.main",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_intlb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/probes/HealthProbe-22",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01",
            "name": "HealthProbe-22",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_intlb.azurerm_lb.main",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.common_intlb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/backendAddressPools/LoadBalancerBackendPool",
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": true,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 0,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/loadBalancingRules/rule-0",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01",
            "name": "rule-0",
            "probe_id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/loadBalancers/hub-ncus-palofw-ilb-01/probes/HealthProbe-22",
            "protocol": "All",
            "resource_group_name": "hub-ncus-palofw-rg"
          },
          "dependencies": [
            "azurerm_resource_group.common_fw",
            "azurerm_resource_group.transit",
            "module.common_intlb.azurerm_lb.main",
            "module.common_intlb.azurerm_lb_backend_address_pool.main",
            "module.common_intlb.azurerm_lb_probe.main",
            "module.common_intlb.azurerm_public_ip.main",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.1.0/26",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-mgmt-sn-01",
            "name": "hub-ncus-palofw-mgmt-sn-01",
            "resource_group_name": "hub-ncus-palofw-rg",
            "virtual_network_name": "hub-ncus-palofw-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.transit",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.1.64/26",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-untrusted-sn-01",
            "name": "hub-ncus-palofw-untrusted-sn-01",
            "resource_group_name": "hub-ncus-palofw-rg",
            "virtual_network_name": "hub-ncus-palofw-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.transit",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.1.128/25",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01/subnets/hub-ncus-palofw-trusted-sn-01",
            "name": "hub-ncus-palofw-trusted-sn-01",
            "resource_group_name": "hub-ncus-palofw-rg",
            "virtual_network_name": "hub-ncus-palofw-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.transit",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.31.1.0/24"
            ],
            "id": "/subscriptions/a7138abf-c1cf-4f7c-a8c1-49ce34a2e4b1/resourceGroups/hub-ncus-palofw-rg/providers/Microsoft.Network/virtualNetworks/hub-ncus-palofw-vnet-01",
            "location": "northcentralus",
            "name": "hub-ncus-palofw-vnet-01",
            "resource_group_name": "hub-ncus-palofw-rg",
            "tags": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.transit"
          ]
        }
      ]
    }
  ]
}